--- a/src/settings.json
+++ b/src/settings.json
@@ -7,5 +7,6 @@
         34.04076382207846
     ],
     "zoom": 9,
-    "pitch": 40
+    "pitch": 40,
+    "customAttribution": "<a href='http: //historicplacesla.org' target='_blank'>Historic Places LA</a> | <a href='https://latimes.com/' target='_blank'>LA Times</a>"
 }
